# consul-haskell

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  TestConsulParsing.hs  consul-haskell.cabal  default.nix  docker-compose.yml  explicitSource.nix  package.yaml  shell.nix  stack.yaml
.github/workflows/: ci.yml  stack-test.yml
docs/: api-support.md
src/: Import.hs
src/Network/: Consul.hs
src/Network/Consul/: Internal.hs  Misc.hs  Sequencer.hs  TemplateHaskell.hs  Types.hs
src/Network/Consul/Client/: Acl.hs  AclPolicy.hs  AclRole.hs  AclToken.hs  Agent.hs  Catalog.hs  Config.hs  Connect.hs  Coordinates.hs  Events.hs  Health.hs  Init.hs  KVStore.hs  Namespaces.hs  Operator.hs  PreparedQueries.hs  Session.hs  Snapshots.hs  Status.hs  Transactions.hs
test/: Import.hs  Util.hs
test/Consul/: AclPolicySpec.hs  AclRoleSpec.hs  AclSpec.hs  AclTokenSpec.hs  AgentSpec.hs  HealthCheckSpec.hs  KeyValueSpec.hs  ServiceSpec.hs  SessionSpec.hs
tests/: Import.hs  Main.hs  SocketUtils.hs  Util.hs
