name:                consul-haskell
version:             0.4.2
synopsis:            A consul client for Haskell
description:
  A consul client for Haskell
  .
  Requires consul 0.5 or later.

license:             BSD3
license-file:        LICENSE
author:              Steve Severance
maintainer:          sseverance@alphaheavy.com
homepage:            https://github.com/alphaHeavy/consul-haskell
bug-reports:         https://github.com/alphaHeavy/consul-haskell/issues
category:            Network

build-type:          Simple
cabal-version:       >= 1.10

extra-source-files:
  tests/Main.hs

library
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
    Network.Consul
    Network.Consul.Internal
    Network.Consul.Types
  build-depends:
    aeson,
    base                       >= 4.6 && < 5,
    base64-bytestring,
    bytestring,
    connection,
    either,
    exceptions,
    http-client,
    http-client-tls,
    http-types,
    lifted-async,
    lifted-base,
    monad-control >= 1.0,
    network,
    retry,
    stm,
    text,
    transformers,
    unordered-containers,
    vector
  ghc-options:
    -Wall

test-suite consul-haskell-test
  default-language:
    Haskell2010
  hs-source-dirs:
    tests
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  build-depends:
    base                       >= 4.6 && < 5,
    consul-haskell,
    http-client,
    network,
    random,
    tasty,
    tasty-hunit,
    text,
    transformers,
    uuid,
    HUnit                      >= 1.2
  ghc-options:
    -Wall


source-repository head
  type:     git
  location: https://github.com/alphaHeavy/consul-haskell.git
