name:                consul-haskell
version:             0.6.2
synopsis:            A consul client for Haskell
description:
  A consul client for Haskell
  .
  Requires consul 1.0 or later. Tested with the latest consul release in each of the release series from 1.3 to 1.9, as well as 1.10.0-alpha.

license:             BSD3
license-file:        LICENSE
author:              Steve Severance
maintainer:          ketzacoatl@protonmail.com
homepage:            https://github.com/alphaHeavy/consul-haskell
bug-reports:         https://github.com/alphaHeavy/consul-haskell/issues
category:            Network

build-type:          Simple
cabal-version:       >= 1.10

extra-source-files:
  tests/Main.hs

library
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
    Import
    Network.Consul
    -- Consul Client API
    Network.Consul.Client.Agent
    Network.Consul.Client.Catalog
    Network.Consul.Client.Health
    Network.Consul.Client.Init
    Network.Consul.Client.KVStore
    Network.Consul.Client.Session

    -- higher level stuff
    Network.Consul.Misc
    Network.Consul.Sequencer

    -- Internals
    Network.Consul.Internal
    Network.Consul.Types
  build-depends:
    aeson,
    base                       >= 4.10 && < 5,
    base64-bytestring,
    bytestring,
    connection,
    either,
    exceptions,
    http-client,
    http-client-tls,
    http-types,
    network,
    retry,
    stm,
    text,
    transformers,
    unliftio >= 0.2.4,
    unordered-containers,
    vector
  ghc-options:
    -Wall

test-suite consul-haskell-test
  default-language:
    Haskell2010
  hs-source-dirs:
    tests
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  other-modules:
    SocketUtils
  build-depends:
    base                       >= 4.6 && < 5,
    bytestring,
    consul-haskell,
    http-client,
    network,
    random,
    retry,
    tasty,
    tasty-hunit,
    text,
    transformers,
    typed-process,
    unliftio,
    uuid,
    HUnit                      >= 1.2
  ghc-options:
    -Wall


source-repository head
  type:     git
  location: https://github.com/alphaHeavy/consul-haskell.git
